rajout des Exceptions