@@ -1,10 +1,13 @@
 package xyz.aweirdwhale.utils.database;
 
+import xyz.aweirdwhale.utils.exceptions.CommunicationException;
+
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 public class CommunicationWDatabase {
-    public static void createRequest() {
+    public static void createRequest(String username, String hashed) throws CommunicationException {
         // send the credentials to the server
         /*
          * Request : {
@@ -18,11 +21,12 @@ public class CommunicationWDatabase {
         System.out.println("Request : " + requestBody);
 
         try {
-            URL url = new URL(ip);
+            URI uri = URI.create(ip);
+            URL url = uri.toURL();
 
         } catch (
                 MalformedURLException e) {
-            throw new RuntimeException(e);
+            throw new CommunicationException("Erreur lors de la communication de : " + e.getMessage());
         }
     }
     // send the request to the server
